--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - 80:80
       - 443:443
   db:
-    image: mysql:latest
+    image: "mariadb:10.1"
     command: mysql --default-authentication-plugin=mysql_native_password
     volumes:
       - "./mysql:/var/lib/mysql"
