--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     image: "mariadb:10.1"
     command: mysql --default-authentication-plugin=mysql_native_password
     volumes:
-      - "./mysql:/var/lib/mysql"
+      - "/grasa/db:/var/lib/mysql:z"
     ports:
       - 3306:3306
     environment:
