--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,26 +1,29 @@
 -i https://pypi.org/simple
 alabaster==0.7.12
-babel==2.6.0
-certifi==2019.3.9
+babel==2.7.0
+certifi==2019.9.11
 chardet==3.0.4
-docutils==0.14
+commonmark==0.9.0
+docutils==0.15.2
+future==0.17.1
 idna==2.8
 imagesize==1.1.0
 jinja2==2.10.1
 markupsafe==1.1.1
-packaging==19.0
-pygments==2.4.0
-pyparsing==2.4.0
-pytz==2019.1
-requests==2.21.0
+packaging==19.2
+pygments==2.4.2
+pyparsing==2.4.2
+pytz==2019.2
+recommonmark==0.6.0
+requests==2.22.0
 six==1.12.0
-snowballstemmer==1.2.1
+snowballstemmer==1.9.1
 sphinx-rtd-theme==0.4.3
-sphinx==2.0.1
+sphinx==2.2.0
 sphinxcontrib-applehelp==1.0.1
 sphinxcontrib-devhelp==1.0.1
 sphinxcontrib-htmlhelp==1.0.2
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
-urllib3==1.24.3
+urllib3==1.25.5
