--- a/Pipfile
+++ b/Pipfile
@@ -1,21 +1,17 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [packages]
-
 django = ">=2.2.0"
 "argon2-cffi" = "*"
 django-compressor = "*"
 "psycopg2" = "*"
 bcrypt = "*"
-
+mysqlclient = "*"
 
 [dev-packages]
-
 django-debug-toolbar = "*"
 sphinx = "*"
 coverage = "*"
@@ -23,7 +19,5 @@ coverage = "*"
 pytest = "*"
 tox = "*"
 
-
 [requires]
-
 python_version = "3.6"
