--- a/Pipfile
+++ b/Pipfile
@@ -1,21 +1,19 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
 
 [packages]
-
 django = ">=2.2.0"
 "argon2-cffi" = "*"
 django-compressor = "*"
 "psycopg2" = "*"
 bcrypt = "*"
+mysqlclient = "*"
 
 
 [dev-packages]
-
 django-debug-toolbar = "*"
 sphinx = "*"
 coverage = "*"
@@ -25,5 +23,4 @@ tox = "*"
 
 
 [requires]
-
 python_version = "3.6"
