--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       dockerfile: Dockerfile
     container_name: Grasa-Django-App
     network_mode: host
+    depends_on:
+      - db
     ports:
       - 80:8000
   db:
