--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,12 @@ services:
       dockerfile: Dockerfile
     container_name: Grasa-Django-App
     network_mode: host
+    depends_on:
+      - db
     ports:
+      - 80:8000
+  db:
+    image: "mariadb:10.1"
     volumes:
       - "~/.cache/django-rit-grasa-db:/var/lib/mysql:z"
     ports:
