docker-compose/docs: Run app as single container
This commit makes changes based on in-person testing and feedback
collected from @ldidonato and @leong96 to get a working Docker Compose
environment working on multiple operating systems.

The docker-compose.yml is reverted to an earlier version. The previous
version created five versions of the application in parallel. This is
hard to test since each team member is using a specific environment to
them. Instead, this commit creates a common environment for everyone to
depend on for the app to work. Doing it this way allows us, as a group,
to quickly be aware if there is a breaking change made to the app
(because it will break for everyone instead of just one person). We
discovered some of this difficulty when debugging with Lauren, Harrison,
and I today.

Lastly, I also updated the docs for the changed port address of running
the application. I changed the port because it is an uncommon port and
it appeared macOS was already doing something on port 8000 and blocked
the app from starting. Using port 16000 for local development was a
random port pick to avoid battling with conflicting ports.

Signed-off-by: Justin W. Flory <git@jwf.io>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,63 +1,15 @@
 version: '3'
 services:
-  justin:
+  app:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: justin
     depends_on:
       - db
     ports:
-      - 4000:8000
-  nathaniel:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: nathaniel
-    depends_on:
-      - db
-    ports:
-      - 5000:8000
-  lei:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: lei
-    depends_on:
-      - db
-    ports:
-      - 3000:8000
-  harrison:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: harrison
-    depends_on:
-      - db
-    ports:
-      - 7000:8000
-  eli:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: eli
-    depends_on:
-      - db
-    ports:
-      - 8000:8000
-  lauren:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: lauren
-    depends_on:
-      - db
-    ports:
-      - 9000:8000
+      - 16000:8000
   db:
     image: "mariadb:10.1"
-    volumes:
-      - "~/.cache/django-rit-grasa-db:/var/lib/mysql:z"
     ports:
       - 3306:3306
     environment:
@@ -65,4 +17,3 @@ services:
       - MYSQL_DATABASE=grasa_event_locator
       - MYSQL_USER=grasaadmin
       - MYSQL_PASSWORD=djangoGrasa2019
-
