--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
 version: '3'
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
+    restart: always
     depends_on:
       - db
     ports:
       - 8000:8000
+    volumes:
+      - ./grasa_event_locator:/app/grasa_event_locator:z
   db:
     image: "mariadb:10.1"
     ports:
