--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
 - 3.6
+- 3.7
 install:
-- pip install -r docs/requirements.txt
+- pip install pipenv
+- pipenv install --dev
 script: docs/test-docs.sh
