--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+##### PROJECT FILES
+
+# This section includes files specific to the django-rit-grasa project.
+
+# Docker Compose database storage
+/db
+
+config.yml
+
+
+
 ##### JETBRAINS
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
@@ -217,8 +228,7 @@ venv.bak/
 .dmypy.json
 dmypy.json
 
-#Database
-/db
+
 
 ##### VIM
 
