--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,15 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = ">=2.2.0"
-"argon2-cffi" = "*"
-django-compressor = "*"
-"psycopg2-binary" = "*"
-bcrypt = "*"
-mysqlclient = "*"
-django-haystack = "*"
-whoosh = "*"
-pyyaml = "*"
+django = "==2.2.6"
+"argon2-cffi" = "==19.2.0"
+django-compressor = "==2.3"
+"psycopg2-binary" = "==2.8.4"
+bcrypt = "==3.1.7"
+mysqlclient = "==1.4.4"
+django-haystack = "==2.8.1"
+whoosh = "==2.7.4"
+pyyaml = "==5.1.2"
 
 [dev-packages]
 coverage = "*"
