ci: Add build path for black-action
Signed-off-by: Justin W. Flory <git@jwf.io>

--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -12,3 +12,4 @@ jobs:
     - uses: actions/checkout@v1
     - name: Reformat Python code with Black code formatter. https://github.com/psf/black
       uses: lgeiger/black-action@master
+      args: "."
