config: Load organization contact info from config (closes #157)
This commit does a few things, but its primary goal is to load info
about an organization (e.g. business hours, address, social media, etc.)
from the standard config file. This is done with changes to `views.py`,
`about.html`, and `config.yml.example`.

This branch was old and I was also working on other changes that got
mashed up with this commit. Some of them are reordering package import
statements according to PEP-8, others are whitespace changes… I know it
doesn't make it the easiest commit to review, I'll work to avoid this in
the future.

I successfully tested this changes on my own, but extra validation is
welcome.

**NOTE**: This requires changes to the `config.yml` file we use. For
local development, I suggest copying `config.yml.example` and
overwriting the `config.yml`, as the example file is written to work
out-of-the-box with local development.

Closes #157. There are no more planned additions to the config file
beyond this point. Initial admin account will be carried out in #162.

Signed-off-by: Justin W. Flory <git@jwf.io>

--- a/config.yml.example
+++ b/config.yml.example
@@ -12,6 +12,28 @@
 
 admin_email: "admin@example.com"
 
+#                      ##### organization_contact #####
+# Change the contact information for the organization in the footer of the
+# website. This information should always remain accurate and correct.
+
+organization_contact:
+  address:
+    street_num: "500"
+    street_name: "East Ave"
+    city: "Rochester"
+    state: "NY"
+    zip: "14607"
+  hours:
+    weekdays: "9am – 5pm"
+    weekends: "closed"
+  phone_num: "(585) 271-4100"
+  email: "racf@racf.org"
+  social_media:
+    facebook: "https://www.facebook.com/GreaterRochesterAfterSchoolAlliance/"
+    twitter: "https://twitter.com/GRASArochester"
+    linkedin: "https://www.linkedin.com/company/rochester-area-community-foundation/"
+  website: "https://www.monroecounty.gov"
+
 #                            ##### database #####
 # Edit database connectivity settings. Default config in example uses the
 # docker-compose defaults for local development. For local development, keep
