config/site_name: Use hostname from config in emails
This commit changes the site_name dict around in the config file. It
adds two fields: `prefix` and `fqdn`. These are in turn used in the
email template files to always use the configured URLs in places like
email.

There is probably a more elegant way to do this. But I am satisfied
enough with this because it puts the hostname in control of the user,
and so long as we are consistent about pulling the hostname in this way
across the back-end, it poses low risk.

Technically, this is lagging work on #157.

Signed-off-by: Justin W. Flory <git@jwf.io>

--- a/config.yml.example
+++ b/config.yml.example
@@ -60,8 +60,10 @@ outgoing_smtp:
   password: "duhnsentqrxgadfh"
 
 #                           ##### site_name #####
-# Set the hostname of the website universally. The hostname set here will
-# reappear multiple times across the project. It is important for this to be an
-# existing DNS record.
+# Creates a resolveable hostname used across the website universally. The site
+# name set here reappears multiple times across the project. It is important
+# for this to be an existing DNS record.
 
-site_name: "localhost"
+site_name:
+  prefix: "http://"
+  fqdn: "localhost:8000"
