:lock: config: Rework HTTP/HTTPS as a boolean
This addresses @nlMeminger's feedback in #213 and I think is actually a
more elegant way of doing this. Basically, there is a hidden string
inside of the emails now that checks if HTTPS is set to true. If it is,
it includes an 's' character. Otherwise, Jinja silently ignores it when
writing out the HTML.

Signed-off-by: Justin W. Flory <git@jwf.io>

--- a/config.yml.example
+++ b/config.yml.example
@@ -64,6 +64,11 @@ outgoing_smtp:
 # name set here reappears multiple times across the project. It is important
 # for this to be an existing DNS record.
 
-site_name:
-  prefix: "http://"
-  fqdn: "localhost:8000"
+site_name: "localhost:8000"
+
+# #### https #####
+# Whether external URLs (e.g. used in emails) write emails with "http://" or
+# "https://" prefixes. Set to yes for HTTPS, no for HTTP. Default is no.
+
+https: no
+
