:gear: config: Add sysadmin_email for logging
This commit adds another option to our config file to set the admin
email for receiving automatic error notifications. This could also be
useful for debugging in some instances.

If I have time, I want to work on logging functionality across the app
and this would hook into that later. But for now, this sets it
internally to the Django settings.

Part of #123.

Signed-off-by: Justin W. Flory <git@jwf.io>

--- a/config.yml.example
+++ b/config.yml.example
@@ -12,6 +12,14 @@
 
 admin_email: "admin@example.com"
 
+#                         ##### sysadmin_email #####
+# Specify an email address for logging notifications and error messages. This
+# address is intended for receipt of technical debugging information related to
+# the site. It is not recommended to set this to an individual person's email
+# inbox.
+
+sysadmin_email: "logging@example.com"
+
 #                      ##### organization_contact #####
 # Change the contact information for the organization in the footer of the
 # website. This information should always remain accurate and correct.
