--- a/config.yml.example
+++ b/config.yml.example
@@ -4,6 +4,13 @@
 # Note: The example config file ships a working config for local development
 # in Docker Compose only.
 
+# ##### secret_key #####
+# Specify a secret key to be used for encryption. This string should be
+# randomly generated and kept secure.
+# https://docs.djangoproject.com/en/2.2/ref/settings/#std:setting-SECRET_KEY
+
+secret_key: "TeamPlatypus2191"
+
 #                           ##### admin_email #####
 # Specify an email address for the first admin user. A user with admin
 # capabilities will be created with the specified email address and a default
