:memo: docs: Reorganize content into User, Dev, Admin
This commit reorganizes our documentation into clear categories based on
the intended reader: either an end-user, a developer, or a system
administrator. I will probably do more with this next week, but this
gets me started.

Supports #192 but does not close.

Signed-off-by: Justin W. Flory <git@jwf.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jobs:
       install:
         - pip install pipenv
         - pipenv install --dev
-      script: docs/test-docs.sh
+      script: docs/build_docs.sh
 
     - language: ruby
       services:
