:shield: CODEOWNERS: Update Python and setup script rules
This commit makes two changes to the CODEOWNERS rule file:

* Adds @jwflory @nlMeminger as requested reviewers for Python files
* Sets @nlMeminger as owner of the setup script for automatic reviews

Signed-off-by: Justin W. Flory <git@jwf.io>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -11,7 +11,7 @@
 *.css                                               @ldidonato @leiyinmon
 *.html                                              @ldidonato @leiyinmon
 *.js                                                @ldidonato @leiyinmon
-*.py                                                @R-Eli-Levasseur @leong96
+*.py                                                @jwflory @nlMeminger @R-Eli-Levasseur @leong96
 *.sh                                                @jwflory @nlMeminger
 ###############################################################################
 
@@ -49,6 +49,7 @@
 /Dockerfile                                         @jwflory @nlMeminger
 /manage.py                                          @jwflory
 /Pipfile                                            @jwflory @nlMeminger
+/up.py                                              @nlMeminger
 ###############################################################################
 
 ############### Documentation and project management resources ################
