:package: dependencies: Add gunicorn >= 20.0.4
This commit does the following:

* Adds `gunicorn[gthread]` for production deployment
* Pins Black to a specific release because upstream's versioning is
  unnecessarily challenging

Mostly following along from here:

    http://docs.gunicorn.org/en/stable/install.html

Also choosing the ASyncIO workers since we are Python 3-compatible:

    http://docs.gunicorn.org/en/stable/design.html#asyncio-workers

Signed-off-by: Justin W. Flory <git@jwf.io>

--- a/Pipfile
+++ b/Pipfile
@@ -13,9 +13,10 @@ mysqlclient = "==1.4.4"
 django-haystack = "==2.8.1"
 whoosh = "==2.7.4"
 pyyaml = "==5.1.2"
+gunicorn = {extras = ["gthread"],version = ">=20.0.4"}
 
 [dev-packages]
-black = "*"
+black = "==19.10b0"
 coverage = "*"
 django-debug-toolbar = "*"
 "flake8" = "*"
