--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
+---
+os: linux
+dist: bionic
 jobs:
   include:
     - language: python
       python: 3.6
+      cache: pip
       install:
-        - pip install pipenv
-        - pipenv install --dev
+        - pipenv lock --dev --requirements > /tmp/requirements.txt
+        - pip install -r /tmp/requirements.txt
       script: docs/build_docs.sh
 
     - language: ruby
