:new: :alembic: ci: Migrate from TravisCI to CircleCI
This commit migrates the continuous integration pipeline from TravisCI
to CircleCI. TravisCI no longer builds for free and open source projects
so I migrated over to CircleCI.

A couple new things were added from the old pipeline:

1. A simple YAML lint is added for YAML files.
2. The Sphinx documentation is built and pushed to GitHub Pages via this
   repository's hosting. This supersedes the ReadTheDocs form of the
   documentation.

This also unblocks other Pull Requests on the repository that are unable
to pass due to the CI pipeline never running. Keeping up with dependency
updates should theoretically be easier.

Signed-off-by: Justin W. Flory (he/him) <git@jwf.io>

--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -1,6 +1,6 @@
 # Production container.
 # Does not install development dependencies. Runs Django with prod settings.
-FROM python:3.6-stretch
+FROM python:3.9-bullseye
 
 ENV DJANGO_SETTINGS_MODULE=grasa_event_locator.settings.production
 
